Fixed homepage navbar on mobile

--- a/styles/hero-style.css
+++ b/styles/hero-style.css
@@ -99,10 +99,29 @@ a:hover {
     }
 }
 
+@media (max-width: 800px) {
+    .navbar ul li {
+        margin: 0 5px;
+    }
+}
+
+@media (max-width: 800px) {
+    .navbar ul {
+        margin-right: 5px;
+        display: flex;
+    }
+}
+
 .navbar ul li a {
     color: black;
     text-decoration: none;
     font-size: 18px;
+}
+
+@media (max-width: 800px) {
+    .navbar ul li a {
+        font-size: 15px;
+    }
 }
 
 .navbar ul li a:hover {
